add rpc get staff by ids
